objects/vlocity_ins__AssetTransaction__c.object
<CustomObject>
    <description>Represents transactions pertaining to an insurance policy or other held product such as member enrollment or financial account. These transactions typically track changes to a policy that effects the premium such as an endorsement, renewal or cancelllation. Master-detail child object of an Asset.</description>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <label>Held Product</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>AssetTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Id</label>
        <referenceTo>vlocity_ins__Statement__c</referenceTo>
        <relationshipLabel>Statement Line Item</relationshipLabel>
        <relationshipName>Statement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransactionDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransactionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Id</label>
        <referenceTo>vlocity_ins__AssetTransaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>PaymentTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransactionNumber__c</fullName>
        <description>Identifier of this transaction in systems of record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Transaction Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>The type of transaction such as renewal, premium payment, withdrawal, surrender, loan, cancellation, endorsement, credit, surcharge, deposit or similar.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Premium Paid</fullName>
                </value>
                <value>
                    <fullName>Billing Notice</fullName>
                </value>
                <value>
                    <fullName>Surrender</fullName>
                </value>
                <value>
                    <fullName>Lapse</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Changed/Endorsed</fullName>
                </value>
                <value>
                    <fullName>Initiate Grace Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>